--- a/c-legacy-releases/2020/10082020.md
+++ b/c-legacy-releases/2020/10082020.md
@@ -1,14 +1,14 @@
 ---
-title: 上一版的發行說明
+title: 上一版的發行說明 - 2020 年 10 月
 description: Experience Cloud 產品和服務上一版的發行說明查看適用於企業的 Creative Cloud 和 Document Cloud 的最新說明和教學課程。
 doc-type: release notes
 last-update: October 2020
 author: mfrei
 exl-id: e4403686-e1de-4f79-8e12-6aad4197644e
-source-git-commit: d26f14589f415571b2b0474ff2e08746c369b597
+source-git-commit: 44697face7d76b7e29e99cf1cb038300a43b689d
 workflow-type: tm+mt
-source-wordcount: '6500'
-ht-degree: 90%
+source-wordcount: '6501'
+ht-degree: 91%
 
 ---
 
@@ -37,7 +37,7 @@ ht-degree: 90%
 * [Experience Manager](#aem)
 * [Campaign](#ac)
 * [Advertising Cloud](#adcloud)
-* [[!DNL Target]](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html?lang=en)
+* [[!DNL Target]](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html?lang=zh-Hant)
 * [[!DNL Magento]](#magento)
 * [[!DNL Marketo Engage]](#marketo)
 * [[!DNL Primetime]](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)
@@ -120,9 +120,9 @@ ht-degree: 90%
 | 功能 | [全面發佈](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=zh-Hant) - 目標日期 | 說明 |
 | ----------- | ---------- | ------- |
 | Adobe Analytics 文件 | 2020 年 10 月 | Adobe Analytics 文件正移至 Experience League。所有文章、影片、發行說明和教學課程，都會在 10 月從 `experienceleague.adobe.com` 的目前位置移至 `experienceleague.adobe.com`。如此能夠確保從單一位置提供所有學習、自助、培訓和社群內容。變更後，您無需執行任何操作，所有連結都將重新導向至 Experience League。開始切換後，我們會更新發行說明。 |
-| [!UICONTROL 工作區]：下載單一維度的 50,000 個項目 | 2020 年 9 月 17 日 | 您將能以自由格式表格，針對單一維度下載 50,000 個項目，並套用區段和篩選條件。這可讓您存取 Analysis Workspace 以外超過 400 列的資料。[更多詳情...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/download-send.html?lang=zh-Hant#download-items) |
-| 工作區：改良[!UICONTROL 線條]視覺化 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何[!UICONTROL 線條]視覺效果的 X 軸與 Y 軸。當[!UICONTROL 線條]視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的高低值。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋不同的迴歸趨勢線，以便輕鬆查看資料趨勢。選項包括[!UICONTROL 線性]、[!UICONTROL 對數]、[!UICONTROL 指數]、[!UICONTROL 冪]和[!UICONTROL 二次方程式]。</li></ul> [更多詳情...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html?lang=zh-Hant) |
-| [!UICONTROL 工作區]：效能說明頁面 | 2020 年 10 月 22 日 | Analysis Workspace 效能說明頁面會顯示對專案效能造成影響的不同因素，以及最佳化秘訣的連結。[更多詳情](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/workspace-faq/optimizing-performance.html?lang=zh-Hant) |
+| [!UICONTROL 工作區]：下載單一維度的 50,000 個項目 | 2020 年 9 月 17 日 | 您將能以自由格式表格，針對單一維度下載 50,000 個項目，並套用區段和篩選條件。這可讓您存取 Analysis Workspace 以外超過 400 列的資料。[更多詳情...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/download-send.html#download-items) |
+| 工作區：改良[!UICONTROL 線條]視覺化 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何[!UICONTROL 線條]視覺效果的 X 軸與 Y 軸。當[!UICONTROL 線條]視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的高低值。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋不同的迴歸趨勢線，以便輕鬆查看資料趨勢。選項包括[!UICONTROL 線性]、[!UICONTROL 對數]、[!UICONTROL 指數]、[!UICONTROL 冪]和[!UICONTROL 二次方程式]。</li></ul> [更多詳情...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html) |
+| [!UICONTROL 工作區]：效能說明頁面 | 2020 年 10 月 22 日 | Analysis Workspace 效能說明頁面會顯示對專案效能造成影響的不同因素，以及最佳化秘訣的連結。[更多詳情](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/workspace-faq/optimizing-performance.html) |
 | [!UICONTROL 工作區][!UICONTROL 線條]視覺效果：移動平均趨勢線選項 | 2020 年 10 月 8 日 | 在「線條」視覺效果趨勢線設定中新增了移動平均。移動平均也稱為滾動平均，會使用特定數量的資料點 (由[!UICONTROL 期間]選項決定)、求取其平均值，並將平均值作為線條中的點。[深入了解](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html) |
 | [!UICONTROL 資料修復 API] | 2020 年 10 月 8 日 | [!UICONTROL 資料修復] API 是從 Analytics 報表套裝中刪除資料的工具。10 月版包含將指定日期範圍內的指定 eVar、Prop 和 Activity Map 變數刪除的功能。未來將發行其他功能。使用資料修復 API 會永久刪除現有的 Adobe Analytics 資料。建議在執行修復時應多加留意，盡可能避免意外刪除。存取資料修復 API 需要簽署合約 - 請洽詢您的帳戶團隊以取得詳細資訊。[更多詳情](https://www.adobe.io/apis/experiencecloud/analytics/docs.html#!AdobeDocs/analytics-2.0-apis/master/data-repair.md) |
 | Analytics 控制面板 UI 的增強功能 | 2020 年 10 月 23 日 | 現在，在 Workspace 中建立行動計分卡時，計分卡的樣式會與應用程式相符。 |
@@ -187,7 +187,7 @@ ht-degree: 90%
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2020 年 9 月 14 日 | [在 Analysis Workspace 中自動建置自由格式表格](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/auto-build-freeform-tables-in-analysis-workspace.html?lang=zh-Hant) | 影片 | 將元件直接拖放至空的專案、面板或[!UICONTROL 自由格式]表格中，系統就會自動以建議的格式為您建立表格。 |
-| 2020 年 9 月 14 日 | [在自由格式表格中使用量度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/working-with-metrics-in-a-freeform-table.html) | 影片 | 瞭解您可以在 [!UICONTROL Analysis Workspace] 的[!UICONTROL 自由格式]表格中使用量度的各種方式。 |
+| 2020 年 9 月 14 日 | [在自由格式表格中使用量度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/working-with-metrics-in-a-freeform-table.html?lang=zh-Hant) | 影片 | 瞭解您可以在 [!UICONTROL Analysis Workspace] 的[!UICONTROL 自由格式]表格中使用量度的各種方式。 |
 | 2020 年 9 月 14 日 | [將 50,000 個項目下載為 CSV 檔](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/curate-and-share-projects/download-50000-items-as-csv.html) | 影片 | [!UICONTROL 將項目下載為 CSV 檔]選項可讓您為[!UICONTROL 自由格式]表格中的一個維度下載最多 50,000 個項目，並套用區段和篩選器。雖然 UI 在分頁前會持續顯示最多 400 個項目，但此選項可讓您在 [!UICONTROL Analysis Workspace] 以外存取更多資料列。 |
 | 2020 年 9 月 14 日 | [Analysis Workspace 中的線條視覺效果](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/line-visualization-in-analysis-workspace.html) | 影片 | 「線條」視覺效果可描繪某個趨勢時段內的量度。視覺效果設定可讓您自訂每個線條的視覺外觀，並加入「顯示 X/Y 軸」、「顯示最小/最大標籤」和「顯示趨勢線」的設定。 |
 | 2020 年 9 月 14 日 | [自由格式表格中的列和欄設定](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/row-and-column-settings-in-freeform-tables.html) | 影片 | 瞭解 Analysis Workspace 的[!UICONTROL 自由格式表格]中的設定，以及這些設定對進入這些表格的資料有何影響。 |
