--- a/c-legacy-releases/2020/10292020.md
+++ b/c-legacy-releases/2020/10292020.md
@@ -1,13 +1,13 @@
 ---
-title: 上一版的發行說明
+title: 上一版的發行說明 - 2020 年 11 月
 description: Experience Cloud 產品和服務上一版的發行說明查看適用於企業的 Creative Cloud 和 Document Cloud 的最新說明和教學課程。
 doc-type: release notes
 last-update: November 2020
 author: mfrei
 exl-id: 42ee5557-08b1-45f0-8388-22f208aae5c0
-source-git-commit: d26f14589f415571b2b0474ff2e08746c369b597
+source-git-commit: 44697face7d76b7e29e99cf1cb038300a43b689d
 workflow-type: tm+mt
-source-wordcount: '9286'
+source-wordcount: '9287'
 ht-degree: 91%
 
 ---
@@ -120,7 +120,7 @@ ht-degree: 91%
 | Adobe Analytics 文件 | 2020 年 11 月 11 日 | Adobe Analytics 文件已移至 Experience League。所有文章、影片、發行說明和教學課程，均於 11 月從 `experienceleague.adobe.com` 的目前位置移至 `experienceleague.adobe.com`。如此能夠確保從單一位置提供所有學習、自助、培訓和社群內容。所有連結都已重新導向至 Experience League。 |
 | [!UICONTROL 工作區] [!UICONTROL 線條]視覺效果：移動平均趨勢線選項 | 2020 年 10 月 8 日 | 在[!UICONTROL 「線條」]視覺效果趨勢線設定中新增了移動平均。移動平均也稱為滾動平均，會使用特定數量的資料點 (由[!UICONTROL 期間]選項決定)、求取其平均值，並將平均值作為線條中的點。[深入了解](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html?lang=zh-Hant) |
 | [!UICONTROL 資料修復 API] | 2020 年 10 月 8 日 | [!UICONTROL 資料修復] API 是從 Analytics 報表套裝中刪除資料的工具。10 月版包含將指定日期範圍內的指定 eVar、Prop 和 [!UICONTROL Activity Map] 變數刪除的功能。未來將發行其他功能。使用[!UICONTROL 資料修復] API 會永久刪除現有的 Adobe Analytics 資料。建議在執行修復時應多加留意，盡可能避免意外刪除。存取[!UICONTROL 資料修復] API 需要簽署合約 - 請洽詢您的帳戶團隊以取得詳細資訊。[深入了解](https://www.adobe.io/apis/experiencecloud/analytics/docs.html#!AdobeDocs/analytics-2.0-apis/master/data-repair.md) |
-| [!UICONTROL 工作區]：效能說明頁面 | 2020 年 10 月 22 日 | [!UICONTROL Analysis Workspace] 效能說明頁面會顯示對專案效能造成影響的不同因素，以及最佳化秘訣的連結。[深入了解](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/workspace-faq/optimizing-performance.html?lang=zh-Hant) |
+| [!UICONTROL 工作區]：效能說明頁面 | 2020 年 10 月 22 日 | [!UICONTROL Analysis Workspace] 效能說明頁面會顯示對專案效能造成影響的不同因素，以及最佳化秘訣的連結。[深入了解](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/workspace-faq/optimizing-performance.html) |
 | Analytics [!UICONTROL 控制面板] UI 的增強功能 | 2020 年 10 月 23 日 | 現在，在[!UICONTROL 工作區]中建立行動計分卡時，計分卡的樣式會與應用程式相符。 |
 
 ### Customer Journey Analytics 新功能 {#cust-journey}
@@ -177,7 +177,7 @@ AN-224702、AN-232791、AN-233982、AN-234384、AN-235608、AN-236538、AN-23659
 | 2020 年 11 月 10 日 | [大量管理 (BAAAM) 簡介](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/introduction-to-bulk-management-baaam.html?lang=zh-Hant#build-and-manage-audiences) | 影片 | 了解 Audience Manager 中特徵與區段的大量管理工具「BAAM」，包括如何完成使用前的設定。 |
 | 2020 年 10 月 8 日 | [自由格式表格：分析的基礎](https://video.tv.adobe.com/v/41766) | 影片 | 了解須知事項，以及您展開本課程後將學到的內容。 |
 | 2020 年 10 月 5 日 | [在 Analysis Workspace 中自動建置自由格式表格](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/auto-build-freeform-tables-in-analysis-workspace.html?lang=zh-Hant) | 影片 | 將元件直接拖放至空白專案、面板或自由格式表格中，系統就會自動以建議的格式為您建立表格。 |
-| 2020 年 10 月 5 日 | [在自由格式表格中使用量度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/working-with-metrics-in-a-freeform-table.html) | 影片 | 了解您可以在 [!UICONTROL Analysis Workspace] 的[!UICONTROL 「自由格式表格」]中使用量度的各種方式。 |
+| 2020 年 10 月 5 日 | [在自由格式表格中使用量度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/working-with-metrics-in-a-freeform-table.html?lang=zh-Hant) | 影片 | 了解您可以在 [!UICONTROL Analysis Workspace] 的[!UICONTROL 「自由格式表格」]中使用量度的各種方式。 |
 | 2020 年 9 月 21 日 | [Journey AI - 預測性傳送時間最佳化](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/communication-channels/email/journey-ai/predictive-send-time-optimization.html) | 影片 | 了解在 Adobe Campaign 和 Journey AI 模型之間同步資料所需的工作流程。了解如何在個別設定檔層級檢視傳送時間分數，以及如何使用傳送時間公式執行電子郵件傳遞。 |
 
 ### Analytics 說明資源
@@ -546,7 +546,7 @@ Adobe Advertising Cloud 發行說明。
 
 ## ![圖示](/assets/target.png)[!DNL Target] {#target}
 
-如需最新版本資訊，請參閱 [[!DNL Target]  發行說明](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html?lang=en)。
+如需最新版本資訊，請參閱 [[!DNL Target]  發行說明](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html?lang=zh-Hant)。
 
 ### 最新 Adobe Target 課程與教學課程
 
