--- a/c-legacy-releases/2020/08132020.md
+++ b/c-legacy-releases/2020/08132020.md
@@ -1,14 +1,14 @@
 ---
-title: 上一版的發行說明
+title: 上一版說明 — 2020年8月
 description: Experience Cloud 產品和服務上一版的發行說明查看適用於企業的 Creative Cloud 和 Document Cloud 的最新說明和教學課程。
 doc-type: release notes
 last-update: August 2020
 author: mfrei
 exl-id: 4fe73301-b2e2-4dab-a979-9a2c8c1d0b73
-source-git-commit: d26f14589f415571b2b0474ff2e08746c369b597
+source-git-commit: 44697face7d76b7e29e99cf1cb038300a43b689d
 workflow-type: tm+mt
-source-wordcount: '6150'
-ht-degree: 89%
+source-wordcount: '6151'
+ht-degree: 90%
 
 ---
 
@@ -37,7 +37,7 @@ ht-degree: 89%
 * [Experience Manager](#aem)
 * [Campaign](#ac)
 * [Advertising Cloud](#adcloud)
-* [[!DNL Target]](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html?lang=en)
+* [[!DNL Target]](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html?lang=zh-Hant)
 * [[!DNL Magento]](#magento)
 * [[!DNL Marketo Engage]](#marketo)
 * [[!DNL Primetime]](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)
@@ -102,7 +102,7 @@ ht-degree: 89%
 | [!UICONTROL 跨裝置分析]：歐洲、中東和非洲地區及亞太地區的上市情況 | 2020 年 8 月 31 日 | [跨裝置分析](https://experienceleague.adobe.com/docs/analytics/components/cda/overview.html)和私密圖表將在歐洲、中東和非洲地區及亞太地區推出，供客戶使用。 |
 | 改良[!UICONTROL 跨裝置分析]的欄位結合功能 (適用於美洲、歐洲、中東和非洲地區) | 2020 年 8 月 31 日 | 透過這套簡化的[!UICONTROL 跨裝置分析]新客戶實作方案，您可選擇根據 Analytics 欄位 (prop 或 eVar) 所儲存的使用者 ID，執行結合作業，而不使用裝置圖表 (co-op 或私密圖表)。此增強功能移除了實作 ECID 與以 CDA 為目的而實作 ID 同步的需求(部分功能仍需同步 ECID 和 ID)。 |
 | Workspace：下載單一維度的 50,000 個項目 | 2020 年 9 月 17 日 | 您將能以自由格式表格，針對單一維度下載 50,000 個項目，並套用區段和篩選條件。這可讓您存取 Analysis Workspace 以外超過 400 列的資料。[更多詳情...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/download-send.html) |
-| 工作區：線條視覺化效果增強功能 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何線條視覺化效果的 x 軸與 y 軸。當線條視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何線條視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的尖峰及低谷。</li><li>您可以在任何線條視覺化效果上覆蓋不同的迴歸趨勢線，以輕鬆查看資料趨勢。選項包括線性、對數、指數、冪和二次方程式。</li></ul> [了解更多...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html?lang=zh-Hant) |
+| 工作區：線條視覺化效果增強功能 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何線條視覺化效果的 x 軸與 y 軸。當線條視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何線條視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的尖峰及低谷。</li><li>您可以在任何線條視覺化效果上覆蓋不同的迴歸趨勢線，以輕鬆查看資料趨勢。選項包括線性、對數、指數、冪和二次方程式。</li></ul> [了解更多...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html) |
 
 
 ### Customer Journey Analytics 新功能 {#cust-journey}
