Updated by task 'AutomatedMDTask_1648488080349_TM-MT_1648488120846'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/100904eb141af4323d93e37f5e9a92b65260f711

--- a/c-legacy-releases/2020/10082020.md
+++ b/c-legacy-releases/2020/10082020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: October 2020
 author: mfrei
 exl-id: e4403686-e1de-4f79-8e12-6aad4197644e
-source-git-commit: 44697face7d76b7e29e99cf1cb038300a43b689d
+source-git-commit: 85babc4aee75bd4372a65c8daf8ca70e902c3b86
 workflow-type: tm+mt
-source-wordcount: '6501'
+source-wordcount: '6503'
 ht-degree: 91%
 
 ---
@@ -59,7 +59,7 @@ ht-degree: 91%
 
 ## ![圖示](/assets/ec_appicon_24.png) Experience Cloud 服務與管理 {#ecloud}
 
-[Experience Cloud 服務與管理](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html)文件先前稱為 _Experience Cloud 核心服務_，其中包含客戶屬性、對象庫 ([!UICONTROL 人物]服務) 啟用、使用者和產品管理，以及 Experience Cloud Cookie。
+[Experience Cloud 服務與管理](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant)文件先前稱為 _Experience Cloud 核心服務_，其中包含客戶屬性、對象庫 ([!UICONTROL 人物]服務) 啟用、使用者和產品管理，以及 Experience Cloud Cookie。
 
 未於 9 月更新。
 
@@ -143,7 +143,7 @@ ht-degree: 91%
 
 | 功能 | [全面發佈](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) - 目標日期 | 說明 |
 | ----------- | ---------- | ---------- |
-| [!UICONTROL 工作區]的[!UICONTROL 「媒體同時檢閱者」]面板 | 2020 年 9 月 17 日 | [!UICONTROL 「媒體同時檢閱者」]面板可供您掌握何時最多人同時觀看媒體，以及趨勢反轉的時間。這項功能提供內容品質和檢視者互動的重要分析，有助於疑難排解或依數量/規模完成規劃。[深入了解...](https://experienceleague.adobe.com/docs/media-analytics/using/media-reports/media-workspace-panels/media-concurrent-viewers.html) |
+| [!UICONTROL 工作區]的[!UICONTROL 「媒體同時檢閱者」]面板 | 2020 年 9 月 17 日 | [!UICONTROL 「媒體同時檢閱者」]面板可供您掌握何時最多人同時觀看媒體，以及趨勢反轉的時間。這項功能提供內容品質和檢視者互動的重要分析，有助於疑難排解或依數量/規模完成規劃。[深入了解...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/panels/media-concurrent-viewers.html?lang=en) |
 
 ### Adobe Analytics 中的修正 {#aa-fixes}
 
@@ -187,7 +187,7 @@ ht-degree: 91%
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2020 年 9 月 14 日 | [在 Analysis Workspace 中自動建置自由格式表格](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/auto-build-freeform-tables-in-analysis-workspace.html?lang=zh-Hant) | 影片 | 將元件直接拖放至空的專案、面板或[!UICONTROL 自由格式]表格中，系統就會自動以建議的格式為您建立表格。 |
-| 2020 年 9 月 14 日 | [在自由格式表格中使用量度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/working-with-metrics-in-a-freeform-table.html?lang=zh-Hant) | 影片 | 瞭解您可以在 [!UICONTROL Analysis Workspace] 的[!UICONTROL 自由格式]表格中使用量度的各種方式。 |
+| 2020 年 9 月 14 日 | [在自由格式表格中使用量度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/working-with-metrics-in-a-freeform-table.html) | 影片 | 瞭解您可以在 [!UICONTROL Analysis Workspace] 的[!UICONTROL 自由格式]表格中使用量度的各種方式。 |
 | 2020 年 9 月 14 日 | [將 50,000 個項目下載為 CSV 檔](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/curate-and-share-projects/download-50000-items-as-csv.html) | 影片 | [!UICONTROL 將項目下載為 CSV 檔]選項可讓您為[!UICONTROL 自由格式]表格中的一個維度下載最多 50,000 個項目，並套用區段和篩選器。雖然 UI 在分頁前會持續顯示最多 400 個項目，但此選項可讓您在 [!UICONTROL Analysis Workspace] 以外存取更多資料列。 |
 | 2020 年 9 月 14 日 | [Analysis Workspace 中的線條視覺效果](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/line-visualization-in-analysis-workspace.html) | 影片 | 「線條」視覺效果可描繪某個趨勢時段內的量度。視覺效果設定可讓您自訂每個線條的視覺外觀，並加入「顯示 X/Y 軸」、「顯示最小/最大標籤」和「顯示趨勢線」的設定。 |
 | 2020 年 9 月 14 日 | [自由格式表格中的列和欄設定](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/row-and-column-settings-in-freeform-tables.html) | 影片 | 瞭解 Analysis Workspace 的[!UICONTROL 自由格式表格]中的設定，以及這些設定對進入這些表格的資料有何影響。 |
