--- a/c-legacy-releases/2020/10292020.md
+++ b/c-legacy-releases/2020/10292020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: November 2020
 author: mfrei
 exl-id: 42ee5557-08b1-45f0-8388-22f208aae5c0
-source-git-commit: 44697face7d76b7e29e99cf1cb038300a43b689d
+source-git-commit: 85babc4aee75bd4372a65c8daf8ca70e902c3b86
 workflow-type: tm+mt
-source-wordcount: '9287'
+source-wordcount: '9289'
 ht-degree: 91%
 
 ---
@@ -55,7 +55,7 @@ ht-degree: 91%
 
 ## ![圖示](/assets/ec_appicon_24.png) Experience Cloud 服務與管理 {#ecloud}
 
-[Experience Cloud 服務與管理](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html)文件先前稱為 _Experience Cloud 核心服務_，其中包含客戶屬性、對象庫 ([!UICONTROL 人物]服務) 啟用、使用者和產品管理，以及 Experience Cloud Cookie。
+[Experience Cloud 服務與管理](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant)文件先前稱為 _Experience Cloud 核心服務_，其中包含客戶屬性、對象庫 ([!UICONTROL 人物]服務) 啟用、使用者和產品管理，以及 Experience Cloud Cookie。
 
 未更新。
 
@@ -139,7 +139,7 @@ ht-degree: 91%
 
 | 功能 | [全面發佈](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) - 目標日期 | 說明 |
 | ----------- | ---------- | ---------- |
-| [!UICONTROL 工作區]的[!UICONTROL 「媒體同時檢閱者」]面板 | 2020 年 9 月 17 日 | [!UICONTROL 「媒體同時檢閱者」]面板可供您掌握何時最多人同時觀看媒體，以及趨勢反轉的時間。這項功能提供內容品質和檢視者互動的重要分析，有助於疑難排解或依數量/規模完成規劃。[深入了解...](https://experienceleague.adobe.com/docs/media-analytics/using/media-reports/media-workspace-panels/media-concurrent-viewers.html) |
+| [!UICONTROL 工作區]的[!UICONTROL 「媒體同時檢閱者」]面板 | 2020 年 9 月 17 日 | [!UICONTROL 「媒體同時檢閱者」]面板可供您掌握何時最多人同時觀看媒體，以及趨勢反轉的時間。這項功能提供內容品質和檢視者互動的重要分析，有助於疑難排解或依數量/規模完成規劃。[深入了解...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/panels/media-concurrent-viewers.html?lang=en) |
 
 ### Adobe Analytics 中的修正 {#aa-fixes}
 
@@ -177,7 +177,7 @@ AN-224702、AN-232791、AN-233982、AN-234384、AN-235608、AN-236538、AN-23659
 | 2020 年 11 月 10 日 | [大量管理 (BAAAM) 簡介](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/introduction-to-bulk-management-baaam.html?lang=zh-Hant#build-and-manage-audiences) | 影片 | 了解 Audience Manager 中特徵與區段的大量管理工具「BAAM」，包括如何完成使用前的設定。 |
 | 2020 年 10 月 8 日 | [自由格式表格：分析的基礎](https://video.tv.adobe.com/v/41766) | 影片 | 了解須知事項，以及您展開本課程後將學到的內容。 |
 | 2020 年 10 月 5 日 | [在 Analysis Workspace 中自動建置自由格式表格](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/auto-build-freeform-tables-in-analysis-workspace.html?lang=zh-Hant) | 影片 | 將元件直接拖放至空白專案、面板或自由格式表格中，系統就會自動以建議的格式為您建立表格。 |
-| 2020 年 10 月 5 日 | [在自由格式表格中使用量度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/working-with-metrics-in-a-freeform-table.html?lang=zh-Hant) | 影片 | 了解您可以在 [!UICONTROL Analysis Workspace] 的[!UICONTROL 「自由格式表格」]中使用量度的各種方式。 |
+| 2020 年 10 月 5 日 | [在自由格式表格中使用量度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/building-freeform-tables/working-with-metrics-in-a-freeform-table.html) | 影片 | 了解您可以在 [!UICONTROL Analysis Workspace] 的[!UICONTROL 「自由格式表格」]中使用量度的各種方式。 |
 | 2020 年 9 月 21 日 | [Journey AI - 預測性傳送時間最佳化](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/communication-channels/email/journey-ai/predictive-send-time-optimization.html) | 影片 | 了解在 Adobe Campaign 和 Journey AI 模型之間同步資料所需的工作流程。了解如何在個別設定檔層級檢視傳送時間分數，以及如何使用傳送時間公式執行電子郵件傳遞。 |
 
 ### Analytics 說明資源
