--- a/c-legacy-releases/2020/09102020.md
+++ b/c-legacy-releases/2020/09102020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: September 2020
 author: mfrei
 exl-id: e652b5bf-d209-4eeb-89fc-af584939d5c5
-source-git-commit: 84d7f170ab65f3f774d6e0f97456c58c6ba7a5dd
+source-git-commit: fe574c18fe36112968b6e58ddb8103239eed9632
 workflow-type: tm+mt
-source-wordcount: '6567'
+source-wordcount: '6569'
 ht-degree: 92%
 
 ---
@@ -138,7 +138,7 @@ Adobe Experience Platform 現有功能更新：
 
 | 功能 | [全面發佈](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) - 目標日期 | 說明 |
 | ----------- | ---------- | ---------- |
-| [!UICONTROL 工作區]的[!UICONTROL 「媒體同時檢閱者」]面板 | 2020 年 9 月 17 日 | [!UICONTROL 「媒體同時檢閱者」]面板可供您掌握何時最多人同時觀看媒體，以及趨勢反轉的時間。這項功能提供內容品質和檢視者互動的重要分析，有助於疑難排解或依數量/規模完成規劃。[深入了解...](https://experienceleague.adobe.com/docs/media-analytics/using/media-reports/media-workspace-panels/media-concurrent-viewers.html) |
+| [!UICONTROL 工作區]的[!UICONTROL 「媒體同時檢閱者」]面板 | 2020 年 9 月 17 日 | [!UICONTROL 「媒體同時檢閱者」]面板可供您掌握何時最多人同時觀看媒體，以及趨勢反轉的時間。這項功能提供內容品質和檢視者互動的重要分析，有助於疑難排解或依數量/規模完成規劃。[深入了解...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/panels/media-concurrent-viewers.html?lang=en) |
 
 ### Adobe Analytics 中的修正 {#aa-fixes}
 
