Temp fix for G11N-9611

--- a/c-legacy-releases/2022/03232022.md
+++ b/c-legacy-releases/2022/03232022.md
@@ -54,7 +54,7 @@ ht-degree: 100%
 
 若想學習、互動和了解 Adobe 產品專家的答案，Experience League 活動會是個好選擇！
 
-****
+Updated **April 5, 2022**
 
 | 活動 | 類型 | 說明 |
 | -----------|---------- | ----|
@@ -484,7 +484,7 @@ Last updated: **October 27, 2021**
 
 ### [!DNL Advertising Cloud Search] 中的新功能 {#adcloud-search}
 
-****
+Last updated: **April 11, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
